syntax = "proto3";

package cloud.lazycat.apis.localdevice;

option go_package = "gitee.com/linakesi/lzc-sdk/lang/go/localdevice";

import "google/protobuf/timestamp.proto";

service PhotoLibrary {
  // 列举所有的系统相册
  rpc ListAlbums(ListAlbumsRequest) returns (ListAlbumsReply) {}

  // 存储一张图片到某个相册中
  rpc PutPhoto(PutPhotoRequest) returns (PutPhotoReply) {}

  rpc DeletePhoto(DeletePhotoRequest) returns (DeletePhotoReply) {}

  // 枚举具体相册中的图片元信息
  rpc ListPhotoMetas(ListPhotoMetasRequest) returns (stream PhotoMeta) {}

  rpc QueryPhoto(QueryPhotoRequest) returns (PhotoMeta) {}

  // PhotoHashSet的大小是不固定的，可能超出protobuf但message的限制(4MB)，因此以stream
  // 的形式返回。
  // 目前有两个使用场景
  // 1. 浏览器访问此接口获取某个图片是否在本地存在
  // 2. 服务端获取此集合并与服务器中存在的图片进行对比，获取未同步到服务器中的图片ID集合
  rpc QueryPhotoHash(QueryPhotoHashRequest) returns (stream PhotoHashSet) {}
}
// 查询照片信息的排序方式
enum PhotoMetasSortType{

  // 创建时间降序
  CREATE_DATE_DESC = 0;
  // 拍照时间降序
  TAKEN_DATE_DESC  = 1;
  // 创建时间升序
  CREATE_DATE_ASC = 2;
  // 拍摄时间升序
  TAKEN_DATE_ASC = 3;
  // 创建时间,拍摄时间降序
  CREATE_TAKEN_DESC = 4;
  // 创建时间,拍摄时间升序
  CREATE_TAKEN_ASC = 5;
  // 拍摄时间，创建时间 降序
  TOKEN_CREATE_DESC = 6;
 // 拍摄时间，创建时间升序
  TOKEN_CREATE_ASC = 7;
}
message QueryPhotoHashRequest {
  // changed_after语义为: changed_after之后的新增文件都会加入返回的集合里,
  // 与文件本身的modify time无关。
  google.protobuf.Timestamp changed_after = 1;
}

message PhotoHashSet {
  // hash --> id
  map<string, string> entry = 1;
}


message QueryPhotoRequest {
  string id = 1;
}

message PutPhotoReply {
  // 新添加图片的id
  string id = 1;
}

message DeletePhotoReply {
  // 删除失败的图片id
  repeated string failed_id = 1;
}

message DeletePhotoRequest {
  repeated string id = 1;
}

message ListPhotoMetasRequest {
  // 相册ID, 若为空，则表示返回所有相册中的图片
  repeated string album_ids = 1;

  int32 thumbnail_width = 2;
  int32 thumbnail_height = 3;

  bool need_file_name = 4;
  bool need_album_ids = 5;
  // 不填写默认按照创建时间降序排序
  optional PhotoMetasSortType stype = 6;
  // 查询第几页(不填写默认为第一页)
  optional uint32 page_num = 7;
  // （每页返回的数据条数，不填写将返回所有数据）
  optional  uint32 page_size = 8;
  // 是否过滤视频 （默认false,照片和视频信息一起返回)
  optional bool is_filter_video = 9;
  // 给定文件的修改时间过滤meta信息返回
  optional google.protobuf.Timestamp filter_by_modified_date = 10 ;
}

message PhotoMeta {
  string id = 1;
  string photo_url = 2; //浏览器直接可以使用的url, 可能是device domain下的一个文件或是一个data url
  string thumbnail_url = 3;
  string width = 4;
  string height = 5;
  repeated string album_ids = 6;
  int64    size = 7;
  string mime = 8;
  string hash = 9;

  optional string file_name = 10;
  optional google.protobuf.Timestamp creation_date = 11;
  optional float latitude = 12;
  optional float longitude = 13;
  optional google.protobuf.Timestamp taken_date = 14;
  optional google.protobuf.Timestamp modified_date = 15;

}

message Album {
  string id = 1;
  string title = 2;
  int32 image_count = 3;
  int32 video_count = 4;
  string cover_image_url = 5;
  // 封面文件(图）id
  string cover_image_id = 6;
}

message ListAlbumsRequest {
   optional int32 thumbnail_width = 1;
   optional int32 thumbnail_height = 2;
   optional int32 thumbnail_choose_way = 3;
}
message ListAlbumsReply {
  repeated Album albums = 1;
}

message PutPhotoRequest {
  string album_id = 1;

  // 图片路径, 支持dataurl
  string url = 2;

  optional string file_name = 3;
}

message PhotoMetas {
  repeated PhotoMeta photoMetas = 1;
}
